// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="ControlledInputField"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="label text"
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      label text
    </label>
  </div>
</div>
`;

exports[`renders the component as checked 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    checked=""
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component as required 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    required=""
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
      <span
        class="FormLabel__required-text"
      >
        (
        required
        )
      </span>
    </label>
  </div>
</div>
`;

exports[`renders the component in a disabled state 1`] = `
<div
  class="ControlledInputField my-extra-class ControlledInputField--disabled"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    class="ControlledInput ControlledInputField__input ControlledInput--disabled"
    data-test-id="cf-ui-controlled-input"
    disabled=""
    id="checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with a help text 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <p
      class="HelpText ControlledInputField__help-text"
      data-test-id="cf-ui-help-text"
    >
      Help Text
    </p>
  </div>
</div>
`;

exports[`renders the component with a light label variation 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label ControlledInputField__label--light"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="ValidationMessage ControlledInputField__validation-message"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="Icon Icon--small Icon--negative ValidationMessage__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      <p
        class="ValidationMessage__text"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
    <div
      class="ValidationMessage ControlledInputField__validation-message"
      data-test-id="cf-ui-validation-message"
    >
      <svg
        class="Icon Icon--small Icon--negative ValidationMessage__icon"
        data-test-id="cf-ui-icon"
        height="1em"
        viewBox="0 0 24 24"
        width="1em"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
        />
      </svg>
      <p
        class="ValidationMessage__text"
      >
        Not valid!
      </p>
    </div>
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    type="checkbox"
    value="someValue"
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  class="ControlledInputField my-extra-class"
  data-test-id="cf-ui-controlled-input-field"
>
  <input
    aria-label="Label Text"
    class="ControlledInput ControlledInputField__input"
    data-test-id="cf-ui-controlled-input"
    id="checkbox"
    type="checkbox"
    value=""
  />
  <div
    class="Checkbox__label-wrapper"
  >
    <label
      class="FormLabel ControlledInputField__label"
      data-test-id="cf-ui-form-label"
      for="checkbox"
    >
      Label Text
    </label>
  </div>
</div>
`;
